@@ -59,6 +59,7 @@
     <Compile Include="..\PresentationFramework\Mono.WindowsPresentationFoundation\Utility.cs">
       <Link>Mono.WindowsPresentationFoundation\Utility.cs</Link>
     </Compile>
+    <Compile Include="Microsoft.Windows.Themes\ProgressBarBrushConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Microsoft.Windows.Themes\ButtonChrome.cs" />
     <Compile Include="Microsoft.Windows.Themes\BulletChrome.cs" />
