@@ -1,3 +1,7 @@
+2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ProgressBarBrushConverter.cs: Added.
+
 2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* ButtonChrome.cs: Fixed MeasureOverride.
